# LDT-03-MOSCOW

./: .env.example  .env.local  .gitignore  Cargo.toml  compose.yml  makefile  readme.md  writerside.workspace.yaml
.github/workflows/: docs.yml  docs2.yml  frontend.yml  rust_matrix.yml
backend/: Dockerfile  Dockerfile.local
backend/.deployment/attachment/: deployment.yml  monitor.yml  service.yml
backend/.deployment/attachmentproxy/: deployment.yml  monitor.yml  service.yml
backend/.deployment/materials/: deployment.yml  monitor.yml  service.yml  version.toml
backend/.deployment/project/: deployment.yml  monitor.yml  service.yml
backend/.deployment/punishment/: deployment.yml  monitor.yml  service.yml
backend/.deployment/report/: deployment.yml  monitor.yml  service.yml
backend/.migrations/: V1.migration_state  V1__migration.sql  V2.migration_state  V2__migration.sql  V3__migration.sql  V4__migration.sql  latest.migration_state
backend/.migrations/attachment/: V1__migration.sql  V2__migration.sql  latest.migration_state
backend/.migrations/data/: V1__migration.sql  V2__migration.sql
backend/.migrations/fk/: V1__migration.sql  V2__migration.sql
backend/.migrations/journal/: V1.migration_state  V1__migration.sql  V2__migration.sql  V3.migration_state  V3__migration.sql  V4.migration_state  V4__migration.sql  V5.migration_state  V5__migration.sql  V6__migration.sql  V7.migration_state  V7__migration.sql  V8__migration.sql  latest.migration_state
backend/.migrations/norm/: V1.migration_state  V1__migration.sql  V2.migration_state  V2__migration.sql  V3.migration_state  V3__migration.sql  V4__migration.sql  latest.migration_state
backend/.migrations/product/: V1__migration.sql  latest.migration_state
backend/.migrations/project/: V1.migration_state  V1__migration.sql  V2.migration_state  V2__migration.sql  V3.migration_state  V3__migration.sql  V4.migration_state  V4__migration.sql  V5.migration_state  V5__migration.sql  V6.migration_state  V7.migration_state  V7__migration.sql  V8__migration.sql  latest.migration_state
backend/.schema/: attachment.yaml  base.yml  journal.yaml  norm.yaml  product.yaml  project.yaml
backend/.schema_gen/: Cargo.toml
backend/.schema_gen/src/: main.rs  yaml_from_db.rs
backend/libs/schema/: Cargo.toml
backend/libs/schema/src/: lib.rs
backend/libs/shared/: Cargo.toml
backend/libs/shared/src/: lib.rs
backend/services/attachment/: Cargo.toml
backend/services/attachment/src/: main.rs  multipart.rs  state.rs
backend/services/attachment/src/api/: mod.rs
backend/services/attachmentproxy/: Cargo.toml
backend/services/attachmentproxy/src/: main.rs
backend/services/materials/: Cargo.toml
backend/services/materials/src/: main.rs
backend/services/materials/src/api/: mod.rs
backend/services/project/: Cargo.toml
backend/services/project/src/: controllers.rs  entities.rs  main.rs  services.rs
backend/services/punishment/: Cargo.toml
backend/services/punishment/src/: main.rs
backend/services/report/: Cargo.toml
backend/services/report/src/: main.rs
docs/: ldt-moscow.tree  writerside.cfg  writerside.yaml
docs/Writerside/cfg/: buildprofiles.xml
frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  eslint.config.mts  package-lock.json  package.json
frontend/.deployment/: deployment.yml  service.yml
frontend/public/: another test.json  test.json
frontend/src/: models.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/Api/: Api.ts
frontend/src/app/activation/: page.tsx
frontend/src/app/components/: header.tsx  map.tsx
frontend/src/app/gant/: page.tsx
frontend/src/app/lib/: polys.ts  (+1 more)
frontend/src/storage/: jobsStorage.ts  projectStorage.ts  userstore.ts
mobile/: gradle.properties  settings.gradle.kts
mobile/composeApp/: build.gradle.kts  composeApp.podspec
mobile/gradle/: libs.versions.toml
mobile/iosApp/Configuration/: Config.xcconfig
mobile/iosApp/iosApp.xcodeproj/: project.pbxproj
mobile_flutter/: .env.local  README.md  makefile  pubspec.yaml
mobile_flutter/android/app/: build.gradle.kts
mobile_flutter/doc/: AttachmentApi.md  Attachments.md
mobile_flutter/ios/: Podfile
mobile_flutter/ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
mobile_flutter/ios/Runner.xcodeproj/: project.pbxproj
mobile_flutter/lib/: main.dart
mobile_flutter/lib/attachment/: attachments_download.dart  attachments_provider.dart
mobile_flutter/lib/auth/: auth_entities.dart  auth_errors.dart  auth_provider.dart  auth_storage_provider.dart
mobile_flutter/lib/bridges/: ocr.dart
mobile_flutter/lib/di/: dependency_builder.dart  dependency_container.dart
mobile_flutter/lib/domain/: entities.dart
mobile_flutter/lib/materials/: materials_provider.dart  materials_storage_provider.dart
mobile_flutter/lib/object/: object_provider.dart  object_storage_provider.dart
mobile_flutter/lib/punishment/: punishment_provider.dart  punishment_storage_provider.dart
mobile_flutter/lib/reports/: reports_provider.dart  reports_storage_provider.dart
mobile_flutter/lib/screens/: about_screen.dart  activation_screen.dart  auth_screen.dart  create_material_screen.dart  create_punishment_item.dart  create_report_screen.dart  map.dart  map_screen.dart  material_screen.dart  object_screen.dart  objects_screen.dart  offline_history.dart  punishment_item_screen.dart  punishment_items_screen.dart  punishments_screen.dart  report_attachments_screen.dart  report_screen.dart  update_punishment_item.dart
mobile_flutter/lib/utils/: NetworkUtils.dart  file_utils.dart  geo_utils.dart  network_utils.dart  style_utils.dart
mobile_flutter/lib/widgets/: attachment_card.dart  attachments.dart  base_header.dart  blur_menu.dart  current_location_layer.dart  drawer_menu.dart  fox_button.dart  fox_header.dart  funny_things.dart  material_card.dart  object_card.dart  punishment_card.dart  punishment_item_card.dart  report_card.dart
mobile_flutter/test/: attachment_api_test.dart  attachments_test.dart  widget_test.dart
mobile_flutter/test/di/: di_test.dart
(+2761 files in other folders)
