[workspace]
members = [ "backend/libs/schema","backend/libs/shared", "backend/.schema_gen", "backend/services/*"]
resolver = "2"

[workspace.dependencies]
orm = { git = "ssh://git@github.com/FoxStudiosTeam/rust-commons.git" , rev ="07f50fc", package = "orm" }
schema_reader = { git = "ssh://git@github.com/FoxStudiosTeam/rust-commons.git" , rev ="07f50fc", package = "schema_reader" }
utils = { git = "ssh://git@github.com/FoxStudiosTeam/rust-commons.git" , rev ="07f50fc", package = "utils" }
di = { git = "ssh://git@github.com/FoxStudiosTeam/rust-commons.git" , rev ="07f50fc", package = "di" }
auth_jwt = { git = "ssh://git@github.com/FoxStudiosTeam/sso.git", rev="979dd042", package = "auth_jwt" }

# be careful adding new local deps - all of it need to be added into dockerfile!
shared = { path = "backend/libs/shared" }
schema = { path = "backend/libs/schema" }