[package]
name = "schema"
version = "0.1.0"
edition = "2024"

[features]
default = ["postgres"]
postgres = []
mysql = []
sqlite = []

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
orm = { workspace = true }
schema_reader = { workspace = true }
serde_json = "1.0.145"
sqlx = "0.8.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utils = { workspace = true }
uuid = { version = "1.18.1", features = ["v4"] }