[package]
name = "schema"
version = "0.1.0"
edition = "2024"

[features]
default = ["postgres", "serde", "utoipa_gen"]
postgres = []
mysql = []
sqlite = []
serde = []
utoipa_gen = ["utoipa"]

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
orm = { workspace = true }
schema_reader = { workspace = true }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = "0.8.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utils = { workspace = true }
uuid = { version = "1.18.1", features = ["v4"] }
utoipa ={ version = "*", features = ["chrono"], optional = true}